[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
social-auth-app-django = "^5.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[tool.black]
line-length = 99
exclude = '''
/(
  | migrations
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
