[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["Krishnan Shankar <krishnans2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
social-auth-app-django = "^5.4.0"
django-bootstrap5 = "^23.3"
rules = "^3.3"
django-extensions = "^3.2.3"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "*"

[tool.black]
line-length = 99
exclude = '''
/(
  | migrations
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
